Desktop/Unhinged/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: unhinged
  labels:
    name: unhinged
